--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 MONGODB_URI=mongodb+srv://uptask_user:uWAPOlBt4JZFiuE3@uptask.flikqjs.mongodb.net/uptask
 FRONTEND_URL=http://localhost:5173
 SECRETORPRIVATEKEY=miMamamemima
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=fb478a0eacb864
+EMAIL_PASS=a8e5702ad170c9
